[package]
name = "string"
version = "0.1.0" # remember to update html_root_url
license = "MIT"
authors = ["Carl Lerche <me@carllerche.com>"]
description = "A UTF-8 encoded string with configurable byte storage."
documentation = "https://docs.rs/string"
homepage = "https://github.com/carllerche/string"
repository = "https://github.com/carllerche/string"
readme = "README.md"

[dependencies]
